GNOME Bugzilla – Bug 767788
rtpjitterbuffer: fix RTPJitterBufferMode documentation
Last modified: 2016-06-17 12:17:32 UTC
RTPJitterBufferMode documentation render badly due to missing '@' before enum value and extra line after symbol section.
Created attachment 329945 [details] [review] rtpjitterbuffer: fix RTPJitterBufferMode documentation
Attachment 329945 [details] pushed as f8f8935 - rtpjitterbuffer: fix RTPJitterBufferMode documentation